RESOLVED FIXED265252
Text in flex items not breaking under specific conditions
https://bugs.webkit.org/show_bug.cgi?id=265252
Summary Text in flex items not breaking under specific conditions
Kevin Muncie
Reported 2023-11-22 08:59:41 PST
Created attachment 468729 [details] Test HTML page showing bug and other permutation which do not exhibit bug This is a very peculiar bug that only seems to be happening in Safari. It was discovered when trying to render Cambodian text in a flex child, though the bug exists even when displaying Roman scripts. In a Flexbox child, with a text string containing no (U+0020) spaces, IF the text: - contains an inline-block element - has zero-width space (U+200B) characters between each word - all elements are wrapped in span elements A screenshot and example HTML document for testing is being attached.
Attachments
Test HTML page showing bug and other permutation which do not exhibit bug (5.71 KB, text/html)
2023-11-22 08:59 PST, Kevin Muncie
no flags
Screenshot showing issue across three browsers (145.04 KB, image/png)
2023-11-22 09:00 PST, Kevin Muncie
no flags
Test reduction (417 bytes, text/html)
2023-11-25 19:11 PST, alan
no flags
Test reduction (301 bytes, text/html)
2023-11-25 19:19 PST, alan
no flags
[fast-cq]Patch (5.69 KB, patch)
2023-11-25 20:48 PST, alan
no flags
Kevin Muncie
Comment 1 2023-11-22 09:00:11 PST
Created attachment 468730 [details] Screenshot showing issue across three browsers
alan
Comment 2 2023-11-25 19:11:15 PST
Created attachment 468755 [details] Test reduction
Radar WebKit Bug Importer
Comment 3 2023-11-25 19:12:03 PST
alan
Comment 4 2023-11-25 19:19:40 PST
Created attachment 468756 [details] Test reduction and now with no flex.
alan
Comment 5 2023-11-25 20:48:26 PST
Created attachment 468757 [details] [fast-cq]Patch
alan
Comment 6 2023-11-25 20:51:14 PST
Thank you for filing this issue! This is indeed a peculiar bug.
EWS
Comment 7 2023-11-26 09:42:58 PST
Committed 271122@main (073d84471418): <https://commits.webkit.org/271122@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 468757 [details].
Note You need to log in before you can comment on or make changes to this bug.