Text in flex items not breaking under specific conditions https://bugs.webkit.org/show_bug.cgi?id=265252 <rdar://problem/118796634>

Reviewed by Antti Koivisto.

"zero width space" character (ZWSP) is a non-whitespace space character and is a word boundary.

This patch ensures legacy preferred with computation treats "zero width space" as a breakable position.

* LayoutTests/fast/text/flexing-content-fails-with-zero-width-space-expected.html: Added.
* LayoutTests/fast/text/flexing-content-fails-with-zero-width-space.html: Added.
* Source/WebCore/rendering/RenderText.cpp:
(WebCore::isSpaceAccordingToStyle):
(WebCore::RenderText::computePreferredLogicalWidths):

Canonical link: https://commits.webkit.org/271122@main